# radiant-rag-mcp

./: .gitignore  AGENTS.md  API.md  AUDIT.md  CLAUDE_CODE_INTEGRATION_GUIDE.md  CLAUDE_CODE_VIDEO_RAG_PROMPT.md  LICENSE  MCP_README.md  RADIANT_RAG_API.md  README.md  architecture_swimlane.html  capability_matrix.html  config.yaml  fastmcp.json  pyproject.toml  radiant_rag_mcp_audit.md  radiant_rag_mcp_colab_test.ipynb
notebooks/: radiant_rag_mcp_audio_test.ipynb  radiant_rag_mcp_colab_test.ipynb  radiant_rag_mcp_search_query.ipynb  radiant_rag_mcp_summarization.ipynb  radiant_rag_mcp_video_test.ipynb  radiant_rag_summarization.ipynb
src/radiant_rag_mcp/: __init__.py  app.py  config.py  orchestrator.py  server.py
src/radiant_rag_mcp/agents/: AGENTS.md  __init__.py  agent_template.py  automerge.py  base.py  base_agent.py  bm25.py  chunking.py  citation.py  context_eval.py  critic.py  decomposition.py  dense.py  expansion.py  fact_verification.py  fusion.py  language_detection.py  multihop.py  planning.py  registry.py  rerank.py  rewrite.py  strategy_memory.py  summarization.py  synthesis.py  tools.py  translation.py  video_summarization.py  web_search.py
src/radiant_rag_mcp/ingestion/: __init__.py  code_chunker.py  github_crawler.py  image_captioner.py  json_parser.py  processor.py  video_processor.py  web_crawler.py
src/radiant_rag_mcp/llm/: __init__.py  client.py  local_models.py
src/radiant_rag_mcp/llm/backends/: __init__.py  base.py  embedding_backends.py  factory.py  llm_backends.py  reranking_backends.py
src/radiant_rag_mcp/storage/: __init__.py  base.py  bm25_index.py  chroma_store.py  factory.py  quantization.py  redis_store.py
src/radiant_rag_mcp/ui/: __init__.py  display.py
src/radiant_rag_mcp/ui/reports/: __init__.py  report.py  text.py
src/radiant_rag_mcp/utils/: __init__.py  cache.py  conversation.py  metrics.py  metrics_export.py  model_manager.py
