[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiant-rag-mcp"
version = "2.0.0"
description = "Radiant Agentic RAG exposed as a Model Context Protocol (MCP) server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Radiant RAG Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["rag", "retrieval", "augmented", "generation", "llm", "agents", "mcp"]

# fastmcp is always required regardless of backend extra chosen
dependencies = [
    "fastmcp>=3.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "unstructured[all-docs]>=0.10.0",
    "tabulate>=0.9.0",
    "tqdm>=4.65.0",
    "transformers>=4.35.0",
    "tokenizers>=0.20.0",
    "accelerate>=0.24.0",
    "safetensors>=0.4.5",
    "huggingface-hub>=0.24.6",
    "pillow>=10.0.0",
    "qwen-vl-utils>=0.0.8",
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
# ChromaDB backend (default; no external service required)
chroma = [
    "chromadb>=0.4.0",
]
# Redis Stack backend (requires Docker: see MCP_README.md)
redis = [
    "redis>=5.0.0",
]
video = [
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
    "openai-whisper>=20231117",
    "opencv-python-headless>=4.8.0",
    "Pillow>=10.0.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=1.24.0",
    "scenedetect[opencv]>=0.6.3",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
radiant-mcp = "radiant_rag_mcp.server:main"

[project.urls]
Homepage = "https://github.com/dshipley71/radiant-rag"
Repository = "https://github.com/dshipley71/radiant-rag"

# src/ layout: setuptools discovers radiant_rag_mcp under src/
[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
